--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -67,17 +67,113 @@ ul.ip-geo-block-statistics-countries li {
     float: left;
 }
 
-table.ip-geo-block-statistics-post th,
-table.ip-geo-block-statistics-type th,
-table.ip-geo-block-statistics-service th,
-table.ip-geo-block-statistics-cache th {
+/* table */
+.ip-geo-block-statistics-post th,
+.ip-geo-block-statistics-type th,
+.ip-geo-block-statistics-service th,
+.ip-geo-block-statistics-cache th {
     width: 12em;
     text-align: right;
 }
 
-table.ip-geo-block-statistics-post td,
-table.ip-geo-block-statistics-type td,
-table.ip-geo-block-statistics-service td,
-table.ip-geo-block-statistics-cache td {
+.ip-geo-block-statistics-post td,
+.ip-geo-block-statistics-type td,
+.ip-geo-block-statistics-service td,
+.ip-geo-block-statistics-cache td {
     text-align: right;
+}
+
+/* for footable */
+.ip-geo-block-log {
+    width: 100% !important;
+}
+.ip-geo-block-log .pagination ul {
+    border-radius: 4px;
+    display: inline-block;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-left: 0;
+}
+.ip-geo-block-log .pagination ul > li {
+    display: inline;
+}
+.ip-geo-block-log .pagination ul > li:first-child > a,
+.ip-geo-block-log .pagination ul > li:first-child > span {
+    border-bottom-left-radius: 4px;
+    border-left-width: 1px;
+    border-top-left-radius: 4px;
+}
+.ip-geo-block-log .pagination ul > li:last-child > a,
+.ip-geo-block-log .pagination ul > li:last-child > span {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.ip-geo-block-log .pagination ul > .disabled > span,
+.ip-geo-block-log .pagination ul > .disabled > a,
+.ip-geo-block-log .pagination ul > .disabled > a:hover,
+.ip-geo-block-log .pagination ul > .disabled > a:focus {
+    background-color: transparent;
+    color: #999;
+    cursor: default;
+}
+.ip-geo-block-log .pagination ul > li > a,
+.ip-geo-block-log .pagination ul > li > span {
+    border-color: #ddd;
+    border-image: none;
+    border-style: solid;
+    border-width: 1px 1px 1px 0;
+    float: left;
+    line-height: 20px;
+    padding: 4px 12px;
+    text-decoration: none;
+}
+.ip-geo-block-log .pagination ul > .active > a,
+.ip-geo-block-log .pagination ul > .active > span {
+    color: #999;
+    cursor: default;
+}
+.ip-geo-block-log .pagination ul > li > a:hover,
+.ip-geo-block-log .pagination ul > li > a:focus,
+.ip-geo-block-log .pagination ul > .active > a,
+.ip-geo-block-log .pagination ul > .active > span {
+    /*background none repeat scroll 0 0 #2ea2cc;
+    color: #fff;*/
+    background-color: #f7f7f7;
+}
+.ip-geo-block-log .pagination-centered {
+    text-align: center;
+}
+.ip-geo-block-log.breakpoint > tbody > tr > td > span.footable-toggle {
+    font-size: 60% !important;
+    position: relative;
+    top: -1px
+}
+.ip-geo-block-log > thead > tr > th,
+.ip-geo-block-log > tbody > tr > td {
+    width: 20%;
+    word-wrap: break-word;
+}
+.ip-geo-block-log > thead > tr > th:first-child,
+.ip-geo-block-log > tbody > tr > td:first-child,
+.ip-geo-block-log > thead > tr > th:first-child + th,
+.ip-geo-block-log > tbody > tr > td:first-child + td {
+    width: 30%;
+}
+.ip-geo-block-log > thead > tr > th > span.footable-sort-indicator {
+    color: #888;
+}
+.ip-geo-block-log > tbody > tr > td {
+    text-align: center;
+}
+.ip-geo-block-log > tbody > tr > td:first-child {
+    text-align: left;
+}
+.ip-geo-block-log .footable-row-detail-row,
+.ip-geo-block-log .footable-row-detail-name {
+    display: block;
+}
+.ip-geo-block-log .footable-row-detail-value {
+    display: inline-block;
+    margin-left: 1em;
+    overflow: scroll;
 }
