--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1,6 +1,7 @@
 /* This stylesheet is used to style the admin option form of the plugin. */
 dfn {
     cursor: help;
+    border-bottom: 1px dotted;
 }
 
 #check-provider label {
@@ -176,4 +177,8 @@ ul.ip-geo-block-statistics-countries li {
     display: inline-block;
     margin-left: 1em;
     overflow: scroll;
+}
+
+td.footable-row-detail-cell * {
+    font-size: 13px !important;
 }
