--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -8,7 +8,6 @@ dfn {
     width: 8em;
     display: inline-block;
 }
-
 @media screen and (min-width:782px) {
     #check-provider .code {
         width: 15em;
@@ -23,7 +22,6 @@ dfn {
     width: 16px;
     display: inline-block;
 }
-
 .ip-geo-block-loading {
     background-size: 16px 16px;
     background-position: center center;
@@ -66,27 +64,34 @@ dfn {
 ul.ip-geo-block-statistics-countries li {
     width: 12em;
     float: left;
+    text-align: right;
+    padding: 0.2em;
 }
 
 /* table */
 .ip-geo-block-statistics-post th,
-.ip-geo-block-statistics-type th,
-.ip-geo-block-statistics-service th,
-.ip-geo-block-statistics-cache th {
-    width: 12em;
-    text-align: right;
-}
-
 .ip-geo-block-statistics-post td,
+.ip-geo-block-statistics-type th,
 .ip-geo-block-statistics-type td,
+.ip-geo-block-statistics-service th,
 .ip-geo-block-statistics-service td,
+.ip-geo-block-statistics-cache th,
 .ip-geo-block-statistics-cache td {
+    width: 12em;
+    margin: 0;
+    padding: 0.2em 0;
     text-align: right;
+    line-height: 1.5em;
 }
 
 /* for footable */
 .ip-geo-block-log {
     width: 100% !important;
+}
+.ip-geo-block-log * {
+    font-size: 13px !important;
+    line-height: 1.5em;
+    vertical-align: middle;
 }
 .ip-geo-block-log .pagination ul {
     border-radius: 4px;
@@ -137,8 +142,6 @@ ul.ip-geo-block-statistics-countries li {
 .ip-geo-block-log .pagination ul > li > a:focus,
 .ip-geo-block-log .pagination ul > .active > a,
 .ip-geo-block-log .pagination ul > .active > span {
-    /*background none repeat scroll 0 0 #2ea2cc;
-    color: #fff;*/
     background-color: #f7f7f7;
 }
 .ip-geo-block-log .pagination-centered {
@@ -147,18 +150,35 @@ ul.ip-geo-block-statistics-countries li {
 .ip-geo-block-log.breakpoint > tbody > tr > td > span.footable-toggle {
     font-size: 60% !important;
     position: relative;
-    top: -1px
+    top: -1px;
+    left: 2px;
 }
 .ip-geo-block-log > thead > tr > th,
 .ip-geo-block-log > tbody > tr > td {
-    width: 20%;
+    padding: 4px 0;
     word-wrap: break-word;
+    width: 20%;
 }
 .ip-geo-block-log > thead > tr > th:first-child,
 .ip-geo-block-log > tbody > tr > td:first-child,
 .ip-geo-block-log > thead > tr > th:first-child + th,
 .ip-geo-block-log > tbody > tr > td:first-child + td {
     width: 30%;
+}
+.ip-geo-block-log > thead > tr > th:nth-child(5),
+.ip-geo-block-log > tbody > tr > td:nth-child(5),
+.ip-geo-block-log > thead > tr > th:nth-child(5) + th,
+.ip-geo-block-log > tbody > tr > td:nth-child(5) + td {
+    width: 60%;
+    text-align: left;
+}
+@media screen and (min-width: 1024px) {
+    .ip-geo-block-log > thead > tr > th:nth-child(3),
+    .ip-geo-block-log > tbody > tr > td:nth-child(3),
+    .ip-geo-block-log > thead > tr > th:nth-child(3) + th,
+    .ip-geo-block-log > tbody > tr > td:nth-child(3) + td {
+        width: 10%;
+    }
 }
 .ip-geo-block-log > thead > tr > th > span.footable-sort-indicator {
     color: #888;
@@ -170,15 +190,11 @@ ul.ip-geo-block-statistics-countries li {
     text-align: left;
 }
 .ip-geo-block-log .footable-row-detail-row,
-.ip-geo-block-log .footable-row-detail-name {
+.ip-geo-block-log .footable-row-detail-name,
+.ip-geo-block-log .footable-row-detail-value {
     display: block;
 }
 .ip-geo-block-log .footable-row-detail-value {
-    display: inline-block;
-    margin-left: 1em;
+    padding: 0 1em 4px 1em;
     overflow: scroll;
-}
-
-td.footable-row-detail-cell * {
-    font-size: 13px !important;
 }
