--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -5,9 +5,6 @@ dfn {
 }
 
 /* legend and fieldset in the form */
-h3 {
-    margin: 1.05em 0.947em 0.675em;
-}
 .form-table {
     margin: 0 1em;
 }
@@ -16,9 +13,34 @@ fieldset.ip-geo-block-field {
     padding: 0.35em 0.625em 0.75em 1em;
     margin: 1.35em 0 1.5em;
 }
+fieldset.ip-geo-block-field h2,
 fieldset.ip-geo-block-field h3 {
     padding: 0;
     margin: 0;
+}
+fieldset.ip-geo-block-field .ip-geo-block-dropup,
+fieldset.ip-geo-block-field .ip-geo-block-dropdown {
+    cursor: pointer;
+    position: relative;
+    padding-left: 1em;
+}
+fieldset.ip-geo-block-field .ip-geo-block-dropup:before,
+fieldset.ip-geo-block-field .ip-geo-block-dropdown:before {
+    content: '';
+    height: 0;
+    width: 0;
+    border: 0.4em solid transparent;
+    position: absolute;
+}
+fieldset.ip-geo-block-field .ip-geo-block-dropup:before {
+    border-left: 0.4em solid #555;
+    top: 15%;
+    left: 3%;
+}
+fieldset.ip-geo-block-field .ip-geo-block-dropdown:before {
+    border-top: 0.4em solid #555;
+    top: 35%;
+    left: 0;
 }
 fieldset.ip-geo-block-field .form-table {
     margin: 0.5em 0 0;
@@ -213,5 +235,7 @@ ul.ip-geo-block-statistics-countries li {
 }
 .ip-geo-block-log .footable-row-detail-value {
     padding: 0 1em 4px 1em;
-    overflow: scroll;
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: break-all;
 }
